--- a/events/frontend/src/components/NewsletterSignup.module.css
+++ b/events/frontend/src/components/NewsletterSignup.module.css
@@ -10,6 +10,7 @@
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   cursor: pointer;
+  background-color: var(--color-gray-500);
 }
 
 .newsletter button:hover {
